crates/pg_syntax/tests/snapshots/postgres_regress/money@75.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '878.08'::money / 11::float4;"
---
SelectStmt@0..36
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..35
    AExpr@7..35
      TypeCast@7..22
        AConst@7..15
          Sconst@7..15 "'878.08'"
        Typecast@15..17 "::"
        TypeName@17..22
          Ident@17..22 "money"
      Whitespace@22..23 " "
      Ascii47@23..24 "/"
      Whitespace@24..25 " "
      TypeCast@25..35
        AConst@25..27
          Iconst@25..27 "11"
        Typecast@27..29 "::"
        TypeName@29..35
          Ident@29..35 "float4"
  Ascii59@35..36 ";"

