crates/pg_syntax/tests/snapshots/postgres_regress/money@8.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT m * 2 FROM money_data;
---
SelectStmt@0..29
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..12
    AExpr@7..12
      ColumnRef@7..8
        Ident@7..8 "m"
      Whitespace@8..9 " "
      Ascii42@9..10 "*"
      Whitespace@10..11 " "
      AConst@11..12
        Iconst@11..12 "2"
  Whitespace@12..13 " "
  From@13..17 "FROM"
  Whitespace@17..18 " "
  RangeVar@18..28
    Ident@18..28 "money_data"
  Ascii59@28..29 ";"

