crates/pg_syntax/tests/snapshots/postgres_regress/money@83.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 12345678901234567::money;"
---
SelectStmt@0..32
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..31
    TypeCast@7..31
      AConst@7..24
        Fconst@7..24 "12345678901234567"
      Typecast@24..26 "::"
      TypeName@26..31
        Ident@26..31 "money"
  Ascii59@31..32 ";"

